--- a/public/app/features/dashboard/partials/dashboard_import.html
+++ b/public/app/features/dashboard/partials/dashboard_import.html
@@ -82,14 +82,14 @@
 
       <div class="gf-form-inline">
         <div class="gf-form gf-form--grow">
-          <folder-picker initial-folder-id="ctrl.folderId"
-            initial-title="ctrl.initialFolderTitle"
-            on-change="ctrl.onFolderChange($folder)"
-            on-load="ctrl.onFolderChange($folder)"
-            enter-folder-creation="ctrl.onEnterFolderCreation()"
-            exit-folder-creation="ctrl.onExitFolderCreation()"
-            enable-create-new="true"
-            label-class="width-15">
+          <folder-picker  label-class="width-15"
+                          initial-folder-id="ctrl.folderId"
+                          initial-title="ctrl.initialFolderTitle"
+                          on-change="ctrl.onFolderChange($folder)"
+                          on-load="ctrl.onFolderChange($folder)"
+                          enter-folder-creation="ctrl.onEnterFolderCreation()"
+                          exit-folder-creation="ctrl.onExitFolderCreation()"
+                          enable-create-new="true">
           </folder-picker>
         </div>
       </div>
