--- a/public/app/plugins/datasource/postgres/partials/query.editor.html
+++ b/public/app/plugins/datasource/postgres/partials/query.editor.html
@@ -18,8 +18,13 @@
         <label class="gf-form-label query-keyword width-5">WHERE</label>
       </div>
 
-      <div class="gf-form" ng-repeat="segment in ctrl.whereSegments">
-        <metric-segment segment="segment" get-options="ctrl.getWhereSegments(segment, $index)" on-change="ctrl.whereSegmentUpdated(segment, $index)"></metric-segment>
+      <div class="gf-form" ng-repeat="part in ctrl.whereSegments">
+        <sql-part-editor class="gf-form-label sql-part" part="part" handle-event="ctrl.handleWherePartEvent(ctrl.whereSegments, part, $event, $index)">
+        </sql-part-editor>
+      </div>
+
+      <div class="gf-form">
+        <metric-segment segment="ctrl.whereAdd" get-options="ctrl.getWhereOptions()" on-change="ctrl.whereAddAction(part, $index)"></metric-segment>
       </div>
 
       <div class="gf-form gf-form--grow">
