--- a/public/app/plugins/datasource/postgres/partials/query.editor.html
+++ b/public/app/plugins/datasource/postgres/partials/query.editor.html
@@ -12,31 +12,13 @@
   <div ng-if="!ctrl.target.rawQuery">
     <div class="gf-form-inline">
       <div class="gf-form">
-        <label class="gf-form-label query-keyword width-7">FROM</label>
+        <label class="gf-form-label query-keyword width-6">FROM</label>
         <metric-segment segment="ctrl.schemaSegment" get-options="ctrl.getSchemaSegments()" on-change="ctrl.schemaChanged()"></metric-segment>
         <metric-segment segment="ctrl.tableSegment" get-options="ctrl.getTableSegments()" on-change="ctrl.tableChanged()"></metric-segment>
-        <label class="gf-form-label query-keyword width-5">WHERE</label>
-      </div>
 
-      <div class="gf-form" ng-repeat="part in ctrl.whereSegments">
-        <sql-part-editor class="gf-form-label sql-part" part="part" handle-event="ctrl.handleWherePartEvent(ctrl.whereSegments, part, $event, $index)">
-        </sql-part-editor>
-      </div>
-
-      <div class="gf-form">
-        <metric-segment segment="ctrl.whereAdd" get-options="ctrl.getWhereOptions()" on-change="ctrl.whereAddAction(part, $index)"></metric-segment>
-      </div>
-
-      <div class="gf-form gf-form--grow">
-        <div class="gf-form-label gf-form-label--grow"></div>
-      </div>
-
-    </div>
-
-    <div class="gf-form-inline">
-      <div class="gf-form">
         <label class="gf-form-label query-keyword width-7">Time column</label>
         <metric-segment segment="ctrl.timeColumnSegment" get-options="ctrl.getTimeColumnSegments()" on-change="ctrl.timeColumnChanged()"></metric-segment>
+
         <label class="gf-form-label query-keyword width-8">Metric column</label>
         <metric-segment segment="ctrl.metricColumnSegment" get-options="ctrl.getMetricColumnSegments()" on-change="ctrl.metricColumnChanged()"></metric-segment>
       </div>
@@ -49,7 +31,7 @@
 
     <div class="gf-form-inline" ng-repeat="selectParts in ctrl.queryModel.selectModels">
       <div class="gf-form">
-        <label class="gf-form-label query-keyword width-7">
+        <label class="gf-form-label query-keyword width-6">
           <span ng-show="$index === 0">SELECT</span>&nbsp;
         </label>
       </div>
@@ -73,7 +55,27 @@
 
     <div class="gf-form-inline">
       <div class="gf-form">
-        <label class="gf-form-label query-keyword width-7">
+        <label class="gf-form-label query-keyword width-6">WHERE</label>
+      </div>
+
+      <div class="gf-form" ng-repeat="part in ctrl.queryModel.whereParts">
+        <sql-part-editor class="gf-form-label sql-part" part="part" handle-event="ctrl.handleWherePartEvent(ctrl.queryModel.whereParts, part, $event, $index)">
+        </sql-part-editor>
+      </div>
+
+      <div class="gf-form">
+        <metric-segment segment="ctrl.whereAdd" get-options="ctrl.getWhereOptions()" on-change="ctrl.whereAddAction(part, $index)"></metric-segment>
+      </div>
+
+      <div class="gf-form gf-form--grow">
+        <div class="gf-form-label gf-form-label--grow"></div>
+      </div>
+
+    </div>
+
+    <div class="gf-form-inline">
+      <div class="gf-form">
+        <label class="gf-form-label query-keyword width-6">
           <span>GROUP BY</span>
         </label>
 
